<resources>
    <string name="app_name">EddySap</string>
    <string name="tabu_technologies">Tabu Technologies.</string>
    <string name="eddy_sap">Eddy Sap</string>
    <string name="cals_fragment">Calls</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="floating_bar">floating for layouts</string>
    <string name="status">Tap to add status update</string>
    <string name="welco_text">Welcome to EddySap a clone!</string>
    <string name="terms_of_service">Read our Privacy policy. Tap Agree and accept our terms of service</string>
    <string name="_256">256</string>
    <string name="sms_charges">Carrier sms charges may apply.</string>
    <string name="enter_phone">Enter Your Phone Number</string>
    <string name="what_s_my_phone_number">EddySap will send an SMS massage to verify your number.What\'s my phone number?</string>
    <string name="plus">+</string>
    <string name="number_p">phone number</string>
    <string name="next">NEXT</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="dete">17/05/2022</string>
    <string name="description">Description</string>
    <string name="my_status">My Status</string>
    <string name="enter_code">Enter code here</string>
    <string name="agree_and_continue">Agree and continue.</string>
    <string name="date">12/06/2022 09:34pm</string>
    <string name="confirm">Confirm</string>
    <string name="profile_info">Profile info</string>
    <string name="words">Please provide your name and an optional profile photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="notifications_setting"><![CDATA[Massage,group & call tones]]></string>
    <string name="using_eddy_sap">Hey there! i am using EddySap.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>