<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.starUp.WelcomeScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welco_text"
            android:textColor="@color/purple_200"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/whats"
            android:layout_margin="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="16sp"
            android:text="@string/terms_of_service"/>

        <Button
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_and_continue"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:background="@color/purple_700"/>

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_above="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tabu_technologies"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>