<?xml version="1.0" encoding="utf-8"?>

<!--Copyright (C) 2016 Harsh Bhakta

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.-->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.auth.PhoneLoginActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/menu_more"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/what_s_my_phone_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_defaultPhoneCode="256" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:hint="@string/number_p"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_charges"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/ed_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="6"
            android:visibility="gone"
            android:hint="@string/enter_code"
            android:maxHeight="48dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/purple_700"
        android:text="@string/next"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>

</layout>