<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.auth.SetUserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/type_your_name_here"
            android:minHeight="48dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_pro_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"

                android:src="@drawable/place_holder"
                app:civ_border_color="@color/purple_700"
                app:civ_border_width="1dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignEnd="@id/user_pro_image"
                android:layout_alignBottom="@id/user_pro_image"
                android:src="@drawable/add_circle"
                app:civ_border_color="#18471A"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/purple_200" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/profile_info"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/words" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/purple_700"
        android:text="@string/next"
        android:textColor="#000000" />

</RelativeLayout>

</layout>